--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -4,7 +4,7 @@ name: products
 
 <section id="products">
 	<div class="wrapper">
-		<a title="<%= I18n.t "products.walk_iphone.name" %>" href="#">
+		<a title="<%= I18n.t "products.walk_iphone.name" %>" href="<%= locale_path "iphone/walk" %>">
 			<img alt="<%= I18n.t "products.walk_iphone.name" %>" src="/images/icon-walk-iphone.png">
 			<h3><%= I18n.t "products.walk_iphone.name" %></h3>
 			<p><%= I18n.t "products.walk_iphone.device" %></p>
